# AULAS/Aula 06/model/DAO/filme/filme.js
@@ -25,7 +25,8 @@ const insertFilme = async function (filme) {
             data_lancamento,
             duracao,
             valor,
-            avaliacao
+            avaliacao,
+            id_classificacao
         ) values (
             '${filme.nome}',
             '${filme.sinopse}',
@@ -33,7 +34,8 @@ const insertFilme = async function (filme) {
             '${filme.data_lancamento}',
             '${filme.duracao}',
             '${filme.valor}',
-            if('${filme.avaliacao}' = '', null, '${filme.avaliacao}')
+            if('${filme.avaliacao}' = '', null, '${filme.avaliacao}'),
+            ${filme.id_classificacao}
         );`
 
         // Encaminha o scriptSQL para o Banco de Dados
@@ -54,13 +56,14 @@ const updateFilme = async function (filme) {
     try {
         let sql = `
         update tbl_filme set
-            nome            = '${filme.nome}',
-            sinopse         = '${filme.sinopse}',
-            capa            = '${filme.capa}',
-            data_lancamento = '${filme.data_lancamento}',
-            duracao         = '${filme.duracao}',
-            valor           = '${filme.valor}',
-            avaliacao       = if('${filme.avaliacao}' = '', null, '${filme.avaliacao}')
+            nome             = '${filme.nome}',
+            sinopse          = '${filme.sinopse}',
+            capa             = '${filme.capa}',
+            data_lancamento  = '${filme.data_lancamento}',
+            duracao          = '${filme.duracao}',
+            valor            = '${filme.valor}',
+            avaliacao        = if('${filme.avaliacao}' = '', null, '${filme.avaliacao}'),
+            id_classificacao = ${filme.id_classificacao}
         where id = ${filme.id};`
         
         let result = await knexConnection.raw(sql)
